--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -9,6 +9,8 @@
 	<title>{{ page.title }}</title>
 	<meta name="author" content="{{ site.author.name }}">
 	<link rel="github" href="github.ico"/>
+	<link rel="icon" href="github.ico" type="image/x-icon"/>
+	<link rel="shortcut icon" href="github.ico" type="image/x-icon"/>
 	<link href='{{ ASSET_PATH }}/css/style.css' rel="stylesheet" media="all">
 	<link href="http://feeds.feedburner.com/{{ site.author.feedbaname }}" rel="alternate" title="{{ page.title }}" type="application/atom+xml">
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js"></script>
